modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/001-allowed-daemonset-runtime-default-securityContext-container.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: allowed-daemonset-runtime-default-securityContext-container
  namespace: testns
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx
          securityContext:
            seccompProfile:
              type: RuntimeDefault
