modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/003-allowed-localhost-profile-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-localhost-profile-annotation
  namespace: testns
  annotations:
    container.seccomp.security.alpha.kubernetes.io/nginx: localhost/my-profile.json
spec:
  containers:
    - name: nginx
      image: nginx
