modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/004-allowed-localhost-profile-securityContext.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-localhost-profile-securityContext
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        seccompProfile:
          type: Localhost
          localhostProfile: my-profile.json
