modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/005-allowed-no-seccomp-profile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-no-seccomp-profile
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
