modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/006-allowed-runtime-default-annotation.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-runtime-default-annotation
  namespace: testns
  annotations:
    seccomp.security.alpha.kubernetes.io/pod: runtime/default
spec:
  containers:
    - name: nginx
      image: nginx
