modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/007-allowed-runtime-default-securityContext-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-runtime-default-securityContext-container
  namespace: testns
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        seccompProfile:
          type: RuntimeDefault
