modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_samples/constraint_templates/pss_baseline/008-allowed-runtime-default-securityContext-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-runtime-default-securityContext-pod
  namespace: testns
spec:
  securityContext:
    seccompProfile:
      type: RuntimeDefault
  containers:
    - name: nginx
      image: nginx
