modules/015-admission-policy-engine/charts/constraint-templates/tests/allowed-seccomp/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-seccomp-profiles
tests:
- name: pss-baseline
  template: ../../templates/security/allowed-seccomp.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 005-allowed-no-seccomp-profile
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/005-allowed-no-seccomp-profile.yaml
    assertions:
    - violations: no
  - name: 007-allowed-runtime-default-securityContext-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/007-allowed-runtime-default-securityContext-container.yaml
    assertions:
    - violations: no
  - name: 008-allowed-runtime-default-securityContext-pod
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/008-allowed-runtime-default-securityContext-pod.yaml
    assertions:
    - violations: no
  - name: 006-allowed-runtime-default-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/006-allowed-runtime-default-annotation.yaml
    assertions:
    - violations: no
  - name: 004-allowed-localhost-profile-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/004-allowed-localhost-profile-securityContext.yaml
    assertions:
    - violations: no
  - name: 003-allowed-localhost-profile-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/003-allowed-localhost-profile-annotation.yaml
    assertions:
    - violations: no
  - name: 013-disallowed-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/013-disallowed-unconfined-securityContext.yaml
    assertions:
    - violations: yes
  - name: 012-disallowed-unconfined-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/012-disallowed-unconfined-annotation.yaml
    assertions:
    - violations: yes
  - name: 011-disallowed-multiple-containers-one-unconfined
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/011-disallowed-multiple-containers-one-unconfined.yaml
    assertions:
    - violations: yes
  - name: 002-allowed-deployment-runtime-default-securityContext-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/002-allowed-deployment-runtime-default-securityContext-container.yaml
    assertions:
    - violations: no
  - name: 010-disallowed-deployment-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/010-disallowed-deployment-unconfined-securityContext.yaml
    assertions:
    - violations: no
  - name: 001-allowed-daemonset-runtime-default-securityContext-container
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/001-allowed-daemonset-runtime-default-securityContext-container.yaml
    assertions:
    - violations: no
  - name: 009-disallowed-daemonset-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_baseline/009-disallowed-daemonset-unconfined-securityContext.yaml
    assertions:
    - violations: no
- name: pss-restricted
  template: ../../templates/security/allowed-seccomp.yaml
  constraint: constraint_pss_restricted.yaml
  cases:
  - name: 017-disallowed-no-seccomp-profile
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/017-disallowed-no-seccomp-profile.yaml
    assertions:
    - violations: yes
  - name: 016-allowed-runtime-default-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/016-allowed-runtime-default-securityContext.yaml
    assertions:
    - violations: no
  - name: 015-allowed-localhost-profile-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/015-allowed-localhost-profile-securityContext.yaml
    assertions:
    - violations: no
  - name: 014-allowed-localhost-profile-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/014-allowed-localhost-profile-annotation.yaml
    assertions:
    - violations: no
  - name: 018-disallowed-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/pss_restricted/018-disallowed-unconfined-securityContext.yaml
    assertions:
    - violations: yes
- name: security-policy
  template: ../../templates/security/allowed-seccomp.yaml
  constraint: constraint_security_policy.yaml
  cases:
  - name: 022-allowed-localhost-verySpecialFile-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/022-allowed-localhost-verySpecialFile-securityContext.yaml
    assertions:
    - violations: no
  - name: 021-allowed-localhost-verySpecialFile-annotation
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/021-allowed-localhost-verySpecialFile-annotation.yaml
    assertions:
    - violations: no
  - name: 027-disallowed-no-seccomp-profile
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/027-disallowed-no-seccomp-profile.yaml
    assertions:
    - violations: yes
  - name: 028-disallowed-runtime-default-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/028-disallowed-runtime-default-securityContext.yaml
    assertions:
    - violations: yes
  - name: 025-disallowed-localhost-wrong-file-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/025-disallowed-localhost-wrong-file-securityContext.yaml
    assertions:
    - violations: yes
  - name: 029-disallowed-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/029-disallowed-unconfined-securityContext.yaml
    assertions:
    - violations: yes
  - name: 026-disallowed-multiple-containers-one-disallowed
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/026-disallowed-multiple-containers-one-disallowed.yaml
    assertions:
    - violations: yes
  - name: 020-allowed-deployment-localhost-verySpecialFile-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/020-allowed-deployment-localhost-verySpecialFile-securityContext.yaml
    assertions:
    - violations: no
  - name: 024-disallowed-deployment-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/024-disallowed-deployment-unconfined-securityContext.yaml
    assertions:
    - violations: no
  - name: 019-allowed-daemonset-localhost-verySpecialFile-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/019-allowed-daemonset-localhost-verySpecialFile-securityContext.yaml
    assertions:
    - violations: no
  - name: 023-disallowed-daemonset-unconfined-securityContext
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/constraint_templates/security_policy/023-disallowed-daemonset-unconfined-securityContext.yaml
    assertions:
    - violations: no
- name: pss-baseline-with-exception
  template: ../../templates/security/allowed-seccomp.yaml
  constraint: constraint_pss_baseline.yaml
  cases:
  - name: 031-035-allowed-by-exception-unconfined
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/031-allow-unconfined.yaml
    object: test_samples/security_policy_exceptions/pods/035-allowed-by-exception-unconfined.yaml
    assertions:
    - violations: no
  - name: 030-033-allowed-by-exception-localhost-profile
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/030-allow-localhost-profile.yaml
    object: test_samples/security_policy_exceptions/pods/033-allowed-by-exception-localhost-profile.yaml
    assertions:
    - violations: no
  - name: 031-034-allowed-by-exception-mismatch-but-constraint-allows
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/031-allow-unconfined.yaml
    object: test_samples/security_policy_exceptions/pods/034-allowed-by-exception-mismatch-but-constraint-allows.yaml
    assertions:
    - violations: no
  - name: 036-disallowed-no-exception-label
    inventory:
    - ../common/test_samples/ns.yaml
    object: test_samples/security_policy_exceptions/pods/036-disallowed-no-exception-label.yaml
    assertions:
    - violations: yes
  - name: 030-037-disallowed-by-exception-profile-mismatch
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/030-allow-localhost-profile.yaml
    object: test_samples/security_policy_exceptions/pods/037-disallowed-by-exception-profile-mismatch.yaml
    assertions:
    - violations: yes
  - name: 032-038-disallowed-by-exception-empty-spec
    inventory:
    - ../common/test_samples/ns.yaml
    - test_samples/security_policy_exceptions/exceptions/032-empty-spec.yaml
    object: test_samples/security_policy_exceptions/pods/038-disallowed-by-exception-empty-spec.yaml
    assertions:
    - violations: yes
